src/tests/routes/snapshots/integration__routes__crate_owner_invitations__invitation_list-3.snap
---
source: src/tests/routes/crate_owner_invitations.rs
expression: invitations
---
{
  "invitations": [],
  "users": [],
  "meta": {
    "next_page": null
  }
}
