src/tests/routes/snapshots/integration__routes__crate_owner_invitations__invitations_list_paginated-2.snap
---
source: src/tests/routes/crate_owner_invitations.rs
expression: invitations
---
{
  "invitations": [
    {
      "invitee_id": 2,
      "inviter_id": 1,
      "crate_id": 2,
      "crate_name": "crate_2",
      "created_at": "[datetime]",
      "expires_at": "[datetime]"
    }
  ],
  "users": [
    {
      "id": 1,
      "login": "foo",
      "name": null,
      "avatar": null,
      "url": "https://github.com/foo",
      "github_username_matches": true,
      "created_at": "[datetime]"
    },
    {
      "id": 2,
      "login": "invited_user",
      "name": null,
      "avatar": null,
      "url": "https://github.com/invited_user",
      "github_username_matches": true,
      "created_at": "[datetime]"
    }
  ],
  "meta": {
    "next_page": null
  }
}
